--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Teams_Players_Info</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_info_activity">info_activity</string>
 </resources>
