--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Teams_Players_Info</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_info_activity">info_activity</string>
+    <string name="title_activity_equipo__inof">Equipo_Inof</string>
 </resources>
